[package]
name = "racoon"
version = "0.1.1"
edition = "2021"
authors = ["Tej Magar"]
description = "Racoon is fast, fully customizable lightweight web framework for rust developers."
license = "MIT"
readme = "README.md"
documentation = "https://tejmagar.github.io/racoon/"
repository = "https://github.com/tejmagar/racoon/"

[dependencies]
matchit = "0.8.0"
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
regex = "1.10.4"
httparse = "1.8.0"
tempfile = "3.10.1"
urlencoding = "2.1.3"
sha1 = "0.10.6"
base64 = "0.22.0"
serde = "1.0.199"
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4"] }
tokio-rustls = "0.26.0"
rustls = "0.23.8"
rustls-pemfile = "2.1.2"
tokio-tls = "0.3.1"
chrono = "0.4.38"
sqlx = {version = "0.7.4", features=["runtime-tokio", "sqlite"]}

[dev-dependencies]


